--- a/results.html
+++ b/results.html
@@ -21,7 +21,7 @@
 
 <h2>Incentive Axis : <span class="weight-300" id="bince"></span></h2>
 <div class="axis">
-    <img id="img-equi" src="value_images/equity.png" height="128pt"/>
+    <img id="img-equi" src="equity.png" height="128pt"/>
     <div class="bar equi" id="bar-equi"><div class="text-wrapper" id="equi"></div></div>
     <div class="bar comp" id="bar-comp"><div class="text-wrapper" id="comp"></div></div>
     <img id="img-comp" src="value_images/competition.png" height="128pt"/>
