--- a/results.html
+++ b/results.html
@@ -49,7 +49,7 @@
 </div>
 <h2>Technology Axis : <span class="weight-300" id="btech"></span></h2>
 <div class="axis">
-    <img id="img-auto" src="value_images/automation.png" height="128pt"/>
+    <img id="img-auto" src="automation.png" height="128pt"/>
     <div class="bar auto" id="bar-auto"><div class="text-wrapper" id="auto"></div></div>
     <div class="bar empl" id="bar-empl"><div class="text-wrapper" id="empl"></div></div>
     <img id="img-empl" src="value_images/employment.png" height="128pt"/>
