--- a/results.html
+++ b/results.html
@@ -24,56 +24,56 @@
     <img id="img-equi" src="equity.png" height="128pt"/>
     <div class="bar equi" id="bar-equi"><div class="text-wrapper" id="equi"></div></div>
     <div class="bar comp" id="bar-comp"><div class="text-wrapper" id="comp"></div></div>
-    <img id="img-comp" src="value_images/competition.png" height="128pt"/>
+    <img id="img-comp" src="competition.png" height="128pt"/>
 </div>
 <h2>Structure Axis : <span class="weight-300" id="bstru"></span></h2>
 <div class="axis">
-    <img id="img-hori" src="value_images/horizontal.png" height="128pt"/>
+    <img id="img-hori" src="horizontal.png" height="128pt"/>
     <div class="bar hori" id="bar-hori"><div class="text-wrapper" id="hori"></div></div>
     <div class="bar hier" id="bar-hier"><div class="text-wrapper" id="hier"></div></div>
-    <img id="img-hier" src="value_images/hierarchy.png" height="128pt"/>
+    <img id="img-hier" src="hierarchy.png" height="128pt"/>
 </div>
 <h2>Intervention Axis : <span class="weight-300" id="binte"></span></h2>
 <div class="axis">
-    <img id="img-dema" src="value_images/demand.png" height="128pt"/>
+    <img id="img-dema" src="demand.png" height="128pt"/>
     <div class="bar dema" id="bar-dema"><div class="text-wrapper" id="dema"></div></div>
     <div class="bar regu" id="bar-regu"><div class="text-wrapper" id="regu"></div></div>
-    <img id="img-regu" src="value_images/regulation.png" height="128pt"/>
+    <img id="img-regu" src="regulation.png" height="128pt"/>
 </div>
 <h2>Centralisation Axis : <span class="weight-300" id="bcent"></span></h2>
 <div class="axis">
-    <img id="img-cent" src="value_images/central.png" height="128pt"/>
+    <img id="img-cent" src="central.png" height="128pt"/>
     <div class="bar cent" id="bar-cent"><div class="text-wrapper" id="cent"></div></div>
     <div class="bar loca" id="bar-loca"><div class="text-wrapper" id="loca"></div></div>
-    <img id="img-loca" src="value_images/local.png" height="128pt"/>
+    <img id="img-loca" src="local.png" height="128pt"/>
 </div>
 <h2>Technology Axis : <span class="weight-300" id="btech"></span></h2>
 <div class="axis">
     <img id="img-auto" src="automation.png" height="128pt"/>
     <div class="bar auto" id="bar-auto"><div class="text-wrapper" id="auto"></div></div>
     <div class="bar empl" id="bar-empl"><div class="text-wrapper" id="empl"></div></div>
-    <img id="img-empl" src="value_images/employment.png" height="128pt"/>
+    <img id="img-empl" src="employment.png" height="128pt"/>
 </div>
 <h2>Land Axis : <span class="weight-300" id="bland"></span></h2>
 <div class="axis">
-    <img id="img-comm" src="value_images/commons.png" height="128pt"/>
+    <img id="img-comm" src="commons.png" height="128pt"/>
     <div class="bar comm" id="bar-comm"><div class="text-wrapper" id="comm"></div></div>
     <div class="bar rent" id="bar-rent"><div class="text-wrapper" id="rent"></div></div>
-    <img id="img-rent" src="value_images/rent.png" height="128pt"/>
+    <img id="img-rent" src="rent.png" height="128pt"/>
 </div>
 <h2>Inheritance Axis : <span class="weight-300" id="binhe"></span></h2>
 <div class="axis">
-    <img id="img-birt" src="value_images/birthright.png" height="128pt"/>
+    <img id="img-birt" src="birthright.png" height="128pt"/>
     <div class="bar birt" id="bar-birt"><div class="text-wrapper" id="birt"></div></div>
     <div class="bar meri" id="bar-meri"><div class="text-wrapper" id="meri"></div></div>
-    <img id="img-meri" src="value_images/merit.png" height="128pt"/>
+    <img id="img-meri" src="merit.png" height="128pt"/>
 </div>
 <h2>Labor Axis : <span class="weight-300" id="blabo"></span></h2>
 <div class="axis">
-    <img id="img-unio" src="value_images/unionized.png" height="128pt"/>
+    <img id="img-unio" src="unionized.png" height="128pt"/>
     <div class="bar unio" id="bar-unio"><div class="text-wrapper" id="unio"></div></div>
     <div class="bar divi" id="bar-divi"><div class="text-wrapper" id="divi"></div></div>
-    <img id="img-divi" src="value_images/divided.png" height="128pt"/>
+    <img id="img-divi" src="divided.png" height="128pt"/>
 </div>
 <h2>Closest Match : <span class="weight-300" id="ideology-label"></span></h2>
 <p>The closest match is currently a work in progress.</p>
